@@ -34,6 +34,7 @@ Bug fixes
  * InlinePanel now handles relations that specify a related_query_name (Aram Dulyan)
  * before_delete_page / after_delete_page hooks now run within the same database transaction as the page deletion (Tomasz Knapik)
  * Seek to the beginning of image files when uploading, to restore compatibility with django-storages Google Cloud and Azure backends (Mikalai Radchuk)
+ * Snippet chooser modal no longer fails on snippet models with UUID primary keys (Sævar Öfjörð Magnússon)
 
 
 Upgrade considerations
